# lambda-nodes

./: README.md
agent/: .env  Cargo.toml  Dockerfile  README.md  example.js  runtime.js
agent/sql/: drop.sql  schema.sql  seed.sql
agent/src/: db.rs  exec_graph.rs  executor.rs  main.rs
agent/src/blocks/: boolean.rs
agent/src/db/: flow.rs  history.rs  logs.rs  mod.rs  models.rs  nodes.rs  pipelines.rs  routes.rs  utils.rs
agent/src/middlewares/: db_logging.rs  mod.rs
agent/src/routes/: exec.rs  history.rs  logs.rs  mod.rs  nodes.rs  ping.rs  pipelines.rs  routes.rs
studio/: Dockerfile  README.md  package.json  pnpm-lock.yaml
studio/app/: app.css  root.tsx
studio/app/components/: frame.tsx  monacoEditorWrapper.tsx  node.tsx  reactflowWrapper.tsx
studio/app/lib/: nodeModel.ts
studio/app/routes/: _index.tsx  history.tsx  library.tsx  logs.tsx  node.edit.$id.tsx  node.new.tsx  pipeline.edit.$id.tsx  pipeline.new.tsx  pipelines.tsx  routes.tsx
