[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
deno_core = { version = "~0.343", features = ["default"] }
deno_web = "~0.232"
deno_fetch = "~0.225"
deno_permissions = "~0.60"
serde_json = { version = "~1.0" }
serde = { version = "~1.0", features = ["derive"] }
cron_tab = "~0.2"
tokio = { version = "~1.44", features = ["full"] }
dotenvy = "~0.15"
tokio-postgres = { version = "~0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "~0.2", features = ["derive", "with-serde_json-1"] }
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
memory-cache-rs = "~0.2"
actix-web = "~4.10"
uuid = { version = "~1.16", features = ["v4"] }
env_logger = "~0.11"
actix-cors = "~0.7"
log = "~0.4"
futures-util = "~0.3"
